--- a/index.html
+++ b/index.html
@@ -83,15 +83,15 @@
                                                 <p>Birthday : <span>30 Dec 1999</span></p>
                                             </div>
                                             <div class="info-item padd-15">
-                                                <p>Linkedin : <br><a href="https://bit.ly/3Zdw1br" target="_blank">https://bit.ly/3Zdw1br</a></p>
+                                                <p>Linkedin : <a href="https://bit.ly/3Zdw1br" target="_blank">bit.ly/3Zdw1br</a></p>
                                             </div>
                                             <div class="info-item padd-15">
-                                                <p>Drive Link: <br><a href="https://bit.ly/4ir5twm" target="_blank">https://bit.ly/4ir5twm</a></p>
+                                                <p>Drive Link: <a href="https://bit.ly/4ir5twm" target="_blank">bit.ly/4ir5twm</a></p>
 
                                             </div>
-                                            <div class="info-item padd-15">
-                                                <p>Email : <span>sharathmootera30@gmail.com</span></p>
-                                            </div>
+                                            <!-- <div class="info-item padd-15">
+                                                <p>Email : <span>sharathmootera30<br>@gmail.com</span></p>
+                                            </div> -->
                                             <div class="info-item padd-15">
                                                 <p>Degree : <span>BSC</span></p>
                                             </div>
@@ -110,7 +110,7 @@
                                                 <a href="SMA_RESUME.pdf" class="btn" download="SMA_RESUME.pdf">Download CV</a>
                                                 <a href="#contact" class="btn hire-me">Hire Me</a>
                                             </div>
-                                        </div>
+                                        </div><br>
                                         
                                     </div>
                                     <br>
